Fixed word wrapping
* Removed word-break: all from code as it's not the container of the text.
* Changed microlight-generated `span` to `display: inline` so that it won't try to keep chunks from being broken by word-break.
* Added `word-break: break-word` to `span` so that entire words will break onto a new line rather than single characters.

--- a/app/src/main/assets/spa/spa.css
+++ b/app/src/main/assets/spa/spa.css
@@ -242,12 +242,12 @@ nav {
       display: block;
       counter-increment: line;
       user-select: text;
-      word-break: break-all;
 
       &> span {
-        display: inline-block;
+        display: inline;
         width: fit-content;
         font-size: inherit;
+        word-break: break-word;
       }
 
       &::before {
